# Vineyard_Rover_Demo

./: README.md  build.sh
dc-vslam-case2023/: CMakeLists.txt  README.md  build.sh
dc-vslam-case2023/config/: config_lab_exp.yaml
dc-vslam-case2023/include/: Camera.h  Conversions.h  FeatureExtractor.h  FeatureMatcher.h  FeatureTracker.h  Frame.h  KeyFrame.h  LocalBA.h  Map.h  Optimizer.h  Settings.h  System.h
dc-vslam-case2023/launch/: DualCamRTAT-2.launch  DualCamRTAT-lab.launch  image_stitching.launch  twin_zed_kokas.launch  zed_multi_cam.launch
dc-vslam-case2023/scripts/: udp_client.py  udp_server.py
dc-vslam-case2023/src/: Camera.cpp  DualCam.cpp  DualCamRT.cpp  DualCamRT_csl_exp.cpp  DualCamRT_gaz_exp.cpp  DualCamRT_old.cpp  FeatureExtractor.cpp  FeatureMatcher.cpp  FeatureTracker.cpp  Frame.cpp  KeyFrame.cpp  LocalBA.cpp  Map.cpp  Settings.cpp  SingleCam.cpp  SingleCamRT.cpp  System.cpp  custom_waypoint_publisher.cpp  from_file_waypoint_publisher.cpp  go_to_goal_x_y_yaw.cpp  nav_goal_waypoint_publisher.cpp
nexus_4wd_mecanum_simulator_demo/: README.md
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description_4_cam.launch  zed_exp_description.launch
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro  zed_camera.urdf.xacro  zed_exp.xacro
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/: CMakeLists.txt  package.xml
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/config/move_base/: base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/launch/: csl_lab_mecanum.launch  poulakakis_kokas.launch  poulakakis_smooth_pid.launch  vineyard_mecanum.launch  zed_multi_cam.launch
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/launch/VSLAM/: gmapping.launch  move_base.launch  point_to_laser_node.launch  slam_RT.launch  slam_RT_Robot.launch
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/maps/: map.yaml
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/rviz/: custom_map.rviz  navigate_disp.rviz  poulakakis_smooth_pid.rviz
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/scripts/: image_saver.py  udp_client (copy).py  udp_client.py  udp_server (copy).py
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/src/: custom_waypoint_publisher1.cpp  from_file_waypoint_publisher1.cpp  go_to_goal_x.cpp  go_to_goal_x_y.cpp  go_to_goal_x_y_smooth.cpp  go_to_goal_x_y_yaw1.cpp  nav_goal_waypoint_publisher1.cpp  waypoints_for_ros.txt
nexus_4wd_mecanum_simulator_demo/nexus_4wd_mecanum_gazebo/worlds/: csl_lab_simulation.world  csl_lab_simulation_accurate.world  csl_lab_simulation_accurate_1.world  csl_lab_simulation_accurate_10.world  csl_lab_simulation_accurate_2.world  csl_lab_simulation_accurate_3.world  csl_lab_simulation_accurate_5.world  csl_lab_simulation_accurate_6.world  csl_lab_simulation_accurate_7.world  vineyard_simulation.world
rover_demo/navigation-noetic-devel/map_server/test/: testmap.yaml  vineyard.yaml
